[gd_scene load_steps=4 format=3 uid="uid://dpufl0l80m4io"]

[ext_resource type="Script" path="res://BudgetMenu/budget_menu.gd" id="1_1tv5o"]
[ext_resource type="Texture2D" uid="uid://blrbi7bpvsoyg" path="res://BudgetMenu/bread.png" id="2_5k5h5"]
[ext_resource type="Texture2D" uid="uid://cqr1kj2f84xr4" path="res://BudgetMenu/coin.png" id="2_yqkxs"]

[node name="BudgetMenu" type="CanvasLayer"]
script = ExtResource("1_1tv5o")

[node name="BackgroundPanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.00245)
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundPanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="BudgetLabel" type="Label" parent="BackgroundPanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
theme_override_font_sizes/font_size = 16
text = "  BUDGET"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IncomeLabel" type="Label" parent="BackgroundPanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 8
text = "Income: $0.00
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HorizontalBoxContainer" type="HBoxContainer" parent="BackgroundPanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer"]
layout_mode = 2

[node name="RentRect" type="TextureRect" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
texture = ExtResource("2_yqkxs")

[node name="FoodRect" type="TextureRect" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
texture = ExtResource("2_5k5h5")

[node name="TransitRect" type="TextureRect" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
texture = ExtResource("2_yqkxs")

[node name="UtilitiesRect" type="TextureRect" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
texture = ExtResource("2_yqkxs")

[node name="InsuranceRect" type="TextureRect" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
texture = ExtResource("2_yqkxs")

[node name="LeisureRect" type="TextureRect" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
texture = ExtResource("2_yqkxs")

[node name="SavingsRect" type="TextureRect" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
texture = ExtResource("2_yqkxs")

[node name="CategoryVBoxContainer" type="VBoxContainer" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Rent" type="Label" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/CategoryVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Rent"
vertical_alignment = 1

[node name="Food" type="Label" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/CategoryVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Food"
vertical_alignment = 1

[node name="Transit" type="Label" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/CategoryVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Transit"
vertical_alignment = 1

[node name="Utilities" type="Label" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/CategoryVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Utilities"
vertical_alignment = 1

[node name="Insurance" type="Label" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/CategoryVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Insurance
"
vertical_alignment = 1

[node name="Leisure" type="Label" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/CategoryVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Leisure"
vertical_alignment = 1

[node name="Savings" type="Label" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/CategoryVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Savings"
vertical_alignment = 1

[node name="NumberVBoxContainer" type="VBoxContainer" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8

[node name="RentNum" type="Label" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/NumberVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "$0"
vertical_alignment = 1

[node name="FoodNum" type="Label" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/NumberVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "$0"
vertical_alignment = 1

[node name="TransitNum" type="Label" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/NumberVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "$0"
vertical_alignment = 1

[node name="UtilitiesNum" type="Label" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/NumberVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "$0"
vertical_alignment = 1

[node name="InsuranceNum" type="Label" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/NumberVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "$0"
vertical_alignment = 1

[node name="LeisureNum" type="Label" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/NumberVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "$0"
vertical_alignment = 1

[node name="SavingsNum" type="Label" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/NumberVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "$0"
vertical_alignment = 1

[node name="SliderVBoxContainer" type="VBoxContainer" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RentSlider" type="HSlider" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/SliderVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="FoodSlider" type="HSlider" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/SliderVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="TransitSlider" type="HSlider" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/SliderVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="UtilitiesSlider" type="HSlider" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/SliderVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="InsuranceSlider" type="HSlider" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/SliderVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="LeisureSlider" type="HSlider" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/SliderVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="SavingsSlider" type="HSlider" parent="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/SliderVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
editable = false
scrollable = false

[connection signal="value_changed" from="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/SliderVBoxContainer/RentSlider" to="." method="_on_rent_slider_value_changed"]
[connection signal="value_changed" from="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/SliderVBoxContainer/FoodSlider" to="." method="_on_food_slider_value_changed"]
[connection signal="value_changed" from="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/SliderVBoxContainer/TransitSlider" to="." method="_on_transit_slider_value_changed"]
[connection signal="value_changed" from="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/SliderVBoxContainer/UtilitiesSlider" to="." method="_on_utlities_slider_value_changed"]
[connection signal="value_changed" from="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/SliderVBoxContainer/InsuranceSlider" to="." method="_on_insurance_slider_value_changed"]
[connection signal="value_changed" from="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/SliderVBoxContainer/LeisureSlider" to="." method="_on_leisure_slider_value_changed"]
[connection signal="value_changed" from="BackgroundPanelContainer/VBoxContainer/HorizontalBoxContainer/SliderVBoxContainer/SavingsSlider" to="." method="_on_savings_slider_value_changed"]
